<resources>
    <string name="app_name">TaskView</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="new_name">Name</string>
    <string name="new_id">Unique ID</string>
    <string name="new_date">DD/MM/YYYY</string>
    <string name="new_desc">Description</string>
    <string name="new_task_title">New Task</string>

    <string name="time_text">No Time Set</string>
    <string name="date_text">No Date Set</string>

    <string name="date_button">Set Date</string>
    <string name="finish_button">Create Task</string>
    <string name="cancel_button">Cancel</string>
    <string name="title_activity_new_user">NewUserActivity</string>
    <string name="new_user_title">New User</string>
    <string name="add_user_button">Create User</string>
    <string name="user_title">Users</string>

    <string name="new_user_id"></string>
    <string name="new_user_name"></string>
    <string name="choose_team_button">Choose Team</string>
    <string name="title_activity_view_users_tasks">ViewUsersTasks</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_team_button">View Team</string>
    <string name="menu_new_task">New Task</string>
    <string name="menu_users">Users</string>
    <string name="menu_new_user">New User</string>
</resources>
