<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    tools:context=".NewTaskActivity"
    android:id="@+id/edit_task_layout"
    android:orientation="vertical"
    android:paddingStart="15dp"
    android:paddingEnd="15dp">


    <EditText android:id="@+id/task_name"
        android:hint="@string/new_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText android:id="@+id/task_desc"
        android:hint="@string/new_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/task_name"/>

    <EditText android:id="@+id/task_id"
        android:hint="@string/new_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/task_desc"/>

    <DatePicker android:id="@+id/date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:layout_below="@id/task_id"/>

    <NumberPicker android:id="@+id/hours_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/task_id"
        android:layout_toRightOf="@+id/date_picker"
        android:layout_marginTop="16dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="4dp" />

    <GridLayout android:id="@+id/linear_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hours_picker"
        android:columnCount="2"
        android:layout_marginTop="10dp">

        <Button android:id="@+id/choose_team_button"
            android:layout_column="0"
            android:layout_rowWeight="1"
            android:layout_row="0"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/choose_team_button" />

        <Button android:id="@+id/view_team_button"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/view_team_button"/>
    </GridLayout>
    <Button android:id="@+id/finish_button"
        android:layout_below="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish_button" />
</RelativeLayout>